feat: added the uploading and changed schema for posts⚙️
